@@ -34,9 +34,9 @@ namespace IceInternal
                     if(_ref.isWellKnown() && !Protocol.isSupported(_ref.getEncoding(), r.getEncoding()))
                     {
                         //
-                        // If a well-known proxy and the returned proxy encoding isn't 
-                        // supported, we're done: there are no compatible endpoints
-                        // we can use.
+                        // If a well-known proxy and the returned
+                        // proxy encoding isn't supported, we're done:
+                        // there's no compatible endpoint we can use.
                         //
                     }
                     else if(!r.isIndirect())
