@@ -552,11 +552,18 @@ def allTests(communicator)
         # Server 2.0 endpoint doesn't support 1.1 version.
     end
 
-    ref10 = "test -e 1.0:default -p 12010";
-    cl10 = Test::MyClassPrx::uncheckedCast(communicator.stringToProxy(ref10));
-    cl10.ice_ping();
-    cl10.ice_encodingVersion(Ice::Encoding_1_0).ice_ping();
-    cl.ice_encodingVersion(Ice::Encoding_1_0).ice_ping();
+    ref10 = "test -e 1.0:default -p 12010"
+    cl10 = Test::MyClassPrx::uncheckedCast(communicator.stringToProxy(ref10))
+    cl10.ice_ping()
+    cl10.ice_encodingVersion(Ice::Encoding_1_0).ice_ping()
+    cl.ice_encodingVersion(Ice::Encoding_1_0).ice_ping()
+
+    # 1.3 isn't supported but since a 1.3 proxy supports 1.1, the
+    # call will use the 1.1 encoding
+    ref13 = "test -e 1.3:default -p 12010"
+    cl13 = Test::MyClassPrx::uncheckedCast(communicator.stringToProxy(ref13))
+    cl13.ice_ping()
+
     puts "ok"
 
     print "testing opaque endpoints... "
