@@ -27,6 +27,11 @@ Changes since version 3.5b
 General Changes
 ===============
 
+- Fixed client side checks for encoding version. An invocation on a
+  proxy with a compatible encoding (same major version) will now
+  succeed even if the encoding minor version isn't supported. In this
+  case, the Ice runtime uses the greatest supported encoding.
+
 - Fixed bug where the retry of an AMI invocation could trigger an
   assertion.
 
